prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/integer_overflow_int_max.diag.txt
ERROR: integer constant overflow
testData/diagnostics/integer_overflow_int_max.nut:1:8

println(9223372036854775808)
        ^------------------


